# framework-learning-examples

./: README.md  crewai_unified.py  embedding.py  pydantic_ai.py  pydantic_ai_unified.py  pyproject.toml  requirements.txt  run.py  run.sh  setup.sh  sql.py  vector_search_tool.py
agentic_ai_framework_examples.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
crewai/: crewai_austin_multi_agent.py  crewai_austin_single_agent.py  crewai_rag_single_agent.py  crewai_sql_single_agent.py  crewai_statefarm_multi_agent.py  crewai_statefarm_multi_agent_listen.py  crewai_statefarm_single_agent.py
pydantic/: pydantic_austin_no_tools.py  pydantic_austin_single_agent.py  pydantic_rag_single_agent.py  pydantic_sql_single_agent.py  pydantic_statefarm_logfire.py  pydantic_statefarm_no_tools.py  pydantic_statefarm_single_agent.py
tasks/: austin.yaml  rag.yaml  sql.yaml  statefarm.yaml
